# internal/server/routes.go
@@ -1,6 +1,8 @@
 package server
 
 import (
+	"leet-repeat-api/internal/database/repositories/progress"
+	"leet-repeat-api/internal/handlers"
 	"net/http"
 	"os"
 
@@ -13,7 +15,7 @@ func (s *Server) RegisterRoutes() http.Handler {
 	r := gin.Default()
 
 	r.Use(cors.New(cors.Config{
-		AllowOrigins:     []string{"http://localhost:5173"}, // Add your frontend URL
+		AllowOrigins:     []string{"*"}, // Add your frontend URL
 		AllowMethods:     []string{"GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"},
 		AllowHeaders:     []string{"Accept", "Authorization", "Content-Type"},
 		AllowCredentials: true, // Enable cookies/auth
@@ -35,7 +37,15 @@ func (s *Server) RegisterRoutes() http.Handler {
 
 	r.GET("/health", s.healthHandler)
 
-	r.GET("/hello", Hello)
+	progressRepo := progress.NewProgressRepository(s.db.DB())
+	progressHandler := handlers.NewProgressHandler(progressRepo)
+
+	progressGroup := r.Group("/api/progress")
+	{
+		progressGroup.POST("/bulk-upsert", progressHandler.BulkUpsert)
+		progressGroup.GET("", progressHandler.GetAll)
+		progressGroup.DELETE("/clear", progressHandler.Clear)
+	}
 
 	return r
 }
@@ -49,14 +59,4 @@ func (s *Server) HelloWorldHandler(c *gin.Context) {
 
 func (s *Server) healthHandler(c *gin.Context) {
 	c.JSON(http.StatusOK, s.db.Health())
-}
-
-// Example handler
-// @Summary Hello world
-// @Description returns hello
-// @Produce json
-// @Success 200 {string} string "hello"
-// @Router /hello [get]
-func Hello(c *gin.Context) {
-	c.JSON(http.StatusOK, "hello")
 }
